--- a/playbooks/oracle_duplicate/rman-pre-duplicate.yml
+++ b/playbooks/oracle_duplicate/rman-pre-duplicate.yml
@@ -64,14 +64,19 @@
 
 # Allow jobs during the blackout so the Audited Interaction archival job may run
 - name: Start database monitoring blackout
-  import_playbook: ../oem_blackout/playbook.yml
-  vars:
-    target: "{{ duplicate_target.split('_primarydb')[0] + '_dbs' }}"
-    action: "start"
-    object_type: "all"
-    blackout: "DUPLICATE_{{ environment_name }}"
-    duration: ""
-    allow_jobs: true
+  hosts: "{{ duplicate_target }}"
+  gather_facts: no
+  tasks:
+    - name: Start database monitoring blackout
+      include_role:
+        name: oracle-oem-blackout
+      vars:
+        target: "{{ duplicate_target.split('_primarydb')[0] + '_dbs' }}"
+        action: "start"
+        object_type: "all"
+        blackout: "DUPLICATE_{{ environment_name }}"
+        duration: ""
+        allow_jobs: true
 
 # If FSFO is enabled then disable it for the refresh, to avoid any attempt to failover when the old primary
 # database is removed.   This will be automatically reinstated when the HA Build step runs later.
