--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/oem_database_passwords.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/oem_database_passwords.yml
@@ -7,7 +7,7 @@
   block:
     - name: Start database monitoring blackout
       include_role:
-        name: ../oem_blackout/oem-blackout
+        name: oracle-oem-blackout
       vars:
         target: "{{ inventory_hostname }}"
         action: "start"
@@ -59,7 +59,7 @@
         # Re-Enable OEM Native Monitoring
         - name: Stop database monitoring blackout
           include_role:
-            name: ../oem_blackout/oem-blackout
+            name: oracle-oem-blackout
           vars:
             target: "{{ inventory_hostname }}"
             action: "stop"
