Dba 951 move oem blackout ansible task to modernisation platform configuration management repo (#616)
* DBA-951

Moved oem_blackout tasks to new role oracle-oem-blackout in modernisation-platform-configuration-management and call that role instead

* Update oracle-db-oem-blackout.yml

Added missing symlink for the roles

* Commit changes made by code formatters

* DBA-951

Leave checkout of oem_blackout in the workflows

* DBA-951

Need to enable oem_blackout is available as a role

* DBA-951

Testing restore point

* Update oracle-db-restore-points.yml

Remove commented lines

* Commit changes made by code formatters

* Update playbook.yml

Fix as import_role was being used at the play level, but import_role is only valid at the task level.

* Commit changes made by code formatters

* Update playbook.yml

Fix as import_role was being used at the play level, but import_role is only valid at the task level.

* Update playbook.yml

Even though import_role works now, it’s safer and more correct to use include_role

* DBA-951

Call new role instead of playbook

* Update oracle-db-oem-patching.yml

No need to use oem_blackout as oem-patching uses a role in mp repo which calls the new role

* Update oracle-db-unified-audit-management.yml

No need to checkout oem_blackout playbook as it's not used

---------

Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>

--- a/.github/workflows/oracle-db-duplicate.yml
+++ b/.github/workflows/oracle-db-duplicate.yml
@@ -218,6 +218,7 @@ jobs:
           repository: ministryofjustice/modernisation-platform-configuration-management
           sparse-checkout-cone-mode: false
           sparse-checkout: |
+            ansible/roles/oracle-oem-blackout
             ansible/roles/secretsmanager-passwords
             ansible/roles/get-modernisation-platform-facts
           path: roles
@@ -575,6 +576,7 @@ jobs:
           repository: ministryofjustice/modernisation-platform-configuration-management
           sparse-checkout-cone-mode: false
           sparse-checkout: |
+            ansible/roles/oracle-oem-blackout
             ansible/roles/secretsmanager-passwords
             ansible/roles/get-modernisation-platform-facts
           path: roles
