--- a/.github/workflows/oracle-db-oem-patching.yml
+++ b/.github/workflows/oracle-db-oem-patching.yml
@@ -198,6 +198,7 @@ jobs:
           repository: ministryofjustice/modernisation-platform-configuration-management
           sparse-checkout-cone-mode: false
           sparse-checkout: |
+            ansible/roles/oracle-oem-blackout
             ansible/roles/oracle-oms-setup
             ansible/roles/oracle-oem-agent-setup
             ansible/roles/secretsmanager-passwords
@@ -250,17 +251,6 @@ jobs:
           ref: ${{ github.event.inputs.SourceCodeVersion }}
           fetch-depth: 0
 
-      - name: Checkout From hmpps-delius-operational-automation
-        uses: actions/checkout@v4
-        with:
-          repository: ministryofjustice/hmpps-delius-operational-automation
-          sparse-checkout-cone-mode: false
-          sparse-checkout: |
-            playbooks/oem_blackout
-          path: roles
-          ref: ${{ github.event.inputs.SourceCodeVersion }}
-          fetch-depth: 0
-
       - name: Checkout Ansible Inventory From modernisation-platform-configuration-management
         uses: actions/checkout@v4
         with:
@@ -280,6 +270,7 @@ jobs:
           sparse-checkout-cone-mode: false
           sparse-checkout: |
             ansible/roles/oracle-oem-agent-setup
+            ansible/roles/oracle-oem-blackout
             ansible/roles/secretsmanager-passwords
             ansible/roles/get-ec2-facts
             ansible/roles/get-modernisation-platform-facts
@@ -301,7 +292,6 @@ jobs:
       - name: Start OEM Agent Update
         run: |
           export ANSIBLE_CONFIG=$ansible_config
-          ln -svf $PWD/roles/playbooks/oem_blackout/oem-blackout $PWD/operations/ansible/roles/oem_blackout
           $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
           -e target=${{needs.build_target_names.outputs.TargetHost}} \
           -e goldimagename=${{ github.event.inputs.GoldImageName }} ${{ github.event.inputs.VerboseOutput != '' && github.event.inputs.VerboseOutput || '-v' }}
