--- a/.github/workflows/oracle-db-toggle-fsfo.yml
+++ b/.github/workflows/oracle-db-toggle-fsfo.yml
@@ -53,6 +53,10 @@ on:
         description: "FSFO mode required."
         required: true
         type: string
+    secrets:
+      AWS_ACCESS_KEY_ID: 
+      AWS_SECRET_ACCESS_KEY: 
+      AWS_SESSION_TOKEN: 
 
 env:
   ansible_config: operations/playbooks/ansible.cfg
@@ -62,7 +66,6 @@ env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
-
 
 permissions:
   contents: read
