Run on development branch

--- a/.github/workflows/oracle-db-toggle-fsfo-excluding-non-working-day.yml
+++ b/.github/workflows/oracle-db-toggle-fsfo-excluding-non-working-day.yml
@@ -1,5 +1,8 @@
 name: "Oracle: Toggle Fast Start Failover Excluding Non-Working Day"
 on:
+  push:
+    branches:
+      - "DBA-849"
   workflow_dispatch:
     inputs:
       TargetEnvironment:
