--- a/.github/workflows/oracle-db-toggle-fsfo-schedule.yml
+++ b/.github/workflows/oracle-db-toggle-fsfo-schedule.yml
@@ -73,30 +73,16 @@ jobs:
                  cat $schedule_file
                  SCHEDULED_JSON=$(jq '.' $schedule_file | jq '{include: .}')
              else
-<<<<<<< HEAD
-                 echo "I am here"
-                 echo "CronSchedule is ${{ github.event.schedule }}"
-<<<<<<< Updated upstream
-                 SCHEDULED_JSON=$(jq '[.[] | select (.CronSchedule=="${{ github.event.schedule }}") | {"TargetEnvironment","Schedule","Action","SkipNonWorkingDays"}]' $schedule_file | jq '{include: .}')
-=======
-                 SCHEDULED_JSON=$(jq '[.[] | select (.CronSchedule=="${{ github.event.schedule }}") | {"TargetEnvironment","CronSchedule","Action","SkipNonWorkingDays"}]' $schedule_file | jq '{include: .}')
->>>>>>> main
-=======
+
                  echo "Schedule file is: $schedule_file"
                  echo "Contents:"
                  cat $schedule_file
                  echo "---------------------"
                  SCHEDULED_JSON=$(jq '[.[] | select (.CronSchedule=="${{ github.event.schedule }}") | {"TargetEnvironment","CronSchedule","Action","SkipNonWorkingDays"}]' $schedule_file | jq '{include: .}')
->>>>>>> Stashed changes
+
              fi
              echo ${SCHEDULED_JSON}
              echo "scheduled_matrix="$(echo ${SCHEDULED_JSON} | sed 's/ //g') >> $GITHUB_OUTPUT
-
-      - name: Upload Run Schedule Filtering In The Current Schedule Only
-        uses: actions/upload-artifact@v4
-        with:
-          name: run_matrix_current
-          path: operations/.github/workflows/oracle-db-toggle-fsfo-schedule.json
 
   report-schedule-toggle-fsfo:
     needs: prepare-run-matrix
@@ -119,173 +105,7 @@ jobs:
               echo "No target environments scheduled for toggling FSFO."
               echo "SM: ${{ needs.prepare-run-matrix.outputs.scheduled_matrix }}"
  
-  # Check if today is not a working day and if so potentially remove any scheduled
-  # toggling of the FSFO from the strategy matrix.  We set max-parallel to 1 for
-  # this job as it updates the Schedule JSON file and we do not want concurrent
-  # updates to be happening.
-  # (If using workflow dispatch we don't check the non-working days since we
-  #  have manually forced that option)
-  check-if-non-working-day:
-    needs: prepare-run-matrix
-    runs-on: ubuntu-latest
-    if: ${{ needs.prepare-run-matrix.outputs.scheduled_matrix != '{"include":[]}' }}
-    strategy:
-      max-parallel: 1
-      fail-fast: false
-      matrix: ${{ fromJson(needs.prepare-run-matrix.outputs.scheduled_matrix || '{}') }}
-    environment: ${{ matrix.TargetEnvironment }}-preapproved
-    container:
-      image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.80.0
-    steps:
-
-      - name: Prepare Inventory Name
-        id: prepareinventorynames
-        run: |
-          # Prepare to run on primary Delius Database Host in this environment
-          target_host="environment_name_$(echo ${{ matrix.TargetEnvironment }} | sed 's/dev/development_dev/;s/test/test_test/;s/training/test_training/;s/stage/preproduction_stage/;s/pre-prod/preproduction_pre_prod/;s/-prod/_production_prod/;s/-/_/g')_delius_primarydb"
-          echo "target_host=${target_host}" >> $GITHUB_OUTPUT
-
-      - name: Download Run Schedule Including Current Runs Only
-        uses: actions/download-artifact@v4
-        with:
-          name: run_matrix_current
-          path: .
-
-      - name: Confirm Filtered Run Matrix
-        run: |
-             cat oracle-db-toggle-fsfo-schedule.json
-
-      - name: Checkout Inventory From modernisation-platform-configuration-management
-        uses: actions/checkout@v4
-        with:
-          repository: ministryofjustice/modernisation-platform-configuration-management
-          sparse-checkout-cone-mode: false
-          sparse-checkout: |
-            ansible/hosts
-            ansible/group_vars
-          path: inventory
-          ref: ${{ github.event.inputs.SourceConfigVersion }}
-          fetch-depth: 0
-
-      - name: Checkout From hmpps-delius-operational-automation
-        uses: actions/checkout@v4
-        with:
-          repository: ministryofjustice/hmpps-delius-operational-automation
-          sparse-checkout-cone-mode: false
-          sparse-checkout: |
-            common/working_day.yml
-            common/files/get_nonworking_days.sh
-          path: operations
-          ref: ${{ github.event.inputs.SourceCodeVersion }}
-          fetch-depth: 0
-
-      - name: Inject static AWS creds (for act)
-        run: |
-             echo "AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID"  >> "$GITHUB_ENV"
-             echo "AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY"  >> "$GITHUB_ENV"
-             echo "AWS_SESSION_TOKEN=$AWS_SESSION_TOKEN"  >> "$GITHUB_ENV"
-
-      - name: Configure AWS Credentials
-        id: login-aws
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          # role-to-assume: "arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/modernisation-platform-oidc-cicd"
-          role-session-name: "hmpps-delius-operational-automation-${{ github.run_number }}"
-          role-duration-seconds: 21600
-          aws-region: "eu-west-2"
-
-      - name: Run Check Working Day Playbook
-        shell: bash
-        env:
-            TARGET_ENVIRONMENT: "${{ matrix.TargetEnvironment }}"
-        run: |
-          shopt -s nocasematch
-          export ANSIBLE_CONFIG=$ansible_config
-          # We run the Ansible to determine if this is a non-working day twice for 2 reasons:
-          # (1) The first run spools to output which makes it easier to debug if there is a problem.
-          # (2) The first run updates the DynamoDB table with the custom list of non-working days, so
-          #     if a new date(s) has been added, it will be picked up and used by the second run to
-          #     actually determine if this is a non-working day.
-          SIMPLE_ENVIRONMENT_NAME="${TARGET_ENVIRONMENT##*-}"
-          $command -vv -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
-              -e target_host=${{ steps.prepareinventorynames.outputs.target_host }} \
-              -e region=eu-west-2 \
-              -e simple_environment_name=${SIMPLE_ENVIRONMENT_NAME}
-          WORKING_DAY=$( $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
-               -e target_host=${{ steps.prepareinventorynames.outputs.target_host }} \
-               -e region=eu-west-2 \
-               -e simple_environment_name=${SIMPLE_ENVIRONMENT_NAME} | grep WORKING_DAY= )
-          WORKING_DAY=$( echo ${WORKING_DAY} | grep -oE "WORKING_DAY=(YES|NO)" | awk -F= '{print $2}' )
-          echo "WORKING DAY $WORKING_DAY"  
-          if [[ "${WORKING_DAY}" != "NO" && "${WORKING_DAY}" != "YES" ]]
-          then
-             echo "Could not determine if today is a working day for the Probation Service."
-             exit 1
-          fi
-          # Exclude Non-Working Days if this option is specified by removing this element from the schedule JSON file
-          if [[ "${WORKING_DAY}" == "NO" && "${{ matrix.SkipNonWorkingDays }}" == "true" ]]
-          then
-<<<<<<< Updated upstream
-<<<<<<< HEAD
-             echo "Removing ${{ matrix.TargetEnvironment }} ${{ matrix.CronSchedule }} (${{ github.event.schedule }}) from FSFO Schedule as it is a non-working day."
-=======
-             echo "Removing ${{ matrix.TargetEnvironment }} (${{ github.event.schedule }}) from FSFO Schedule as it is a non-working day."
->>>>>>> Stashed changes
-             echo "CronSchedule:${{ github.event.schedule }}"
-             echo "TargetEnvironment:${{ matrix.TargetEnvironment }}"
-             echo "Action:${{ matrix.Action }}"
-             echo "SkipNonWorkingDays:${{ matrix.SkipNonWorkingDays }}"
-<<<<<<< Updated upstream
-=======
-             echo "Removing ${{ matrix.TargetEnvironment }} (${{ github.event.schedule }}) from FSFO Schedule as it is a non-working day."
->>>>>>> main
-=======
-             echo "Filtered Run Matrix:${{ fromJson(needs.prepare-run-matrix.outputs.scheduled_matrix) }}"
->>>>>>> Stashed changes
-             jq 'del(.[] | select(.CronSchedule=="${{ github.event.schedule }}" and .TargetEnvironment=="${{ matrix.TargetEnvironment }}" and .Action=="${{ matrix.Action }}" and .SkipNonWorkingDays==${{ matrix.SkipNonWorkingDays }}))' oracle-db-toggle-fsfo-schedule.json > /tmp/schedule.json && mv /tmp/schedule.json oracle-db-toggle-fsfo-schedule.json
-          fi
-          cat oracle-db-toggle-fsfo-schedule.json
-
-      - name: Upload Run Schedule Excluding Non Working Days
-        uses: actions/upload-artifact@v4
-        with:
-          name: run_matrix_excluding_non_working
-          path: oracle-db-toggle-fsfo-schedule.json
-
-  # We regenerate the filtered run matrix now where any entries for non-working days have been removed
-  prepare-filtered-run-matrix:
-    needs: check-if-non-working-day
-    runs-on: ubuntu-latest
-    outputs:
-      scheduled_matrix: ${{ steps.filter-toggle-fsfo-schedule.outputs.scheduled_matrix }}
-    steps:
-
-      - name: Download Run Schedule Excluding Non Working Days (Overwrite existing file)
-        uses: actions/download-artifact@v4
-        with:
-          name: run_matrix_excluding_non_working
-          path: .
-
-      - name: Confirm Filtered Run Matrix
-        run: |
-             cat oracle-db-toggle-fsfo-schedule.json
-
-      - name: Filter Toggle FSFO Schedule
-        id: filter-toggle-fsfo-schedule
-        shell: bash
-        run: |
-             # Schedule an immediate run if using Workflow Dispatch, otherwise check if a run is scheduled.
-             if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]; then
-                 cat oracle-db-toggle-fsfo-schedule.json
-                 SCHEDULED_JSON=$(jq '.' oracle-db-toggle-fsfo-schedule.json | jq '{include: .}')
-             else
-                 SCHEDULED_JSON=$(jq '[.[] | select (.CronSchedule=="${{ github.event.schedule }}") | {"TargetEnvironment","Action"}]' oracle-db-toggle-fsfo-schedule.json | jq '{include: .}')
-             fi
-             echo ${SCHEDULED_JSON} | sed 's/ //g'
-             echo "scheduled_matrix="$(echo ${SCHEDULED_JSON} | sed 's/ //g') >> $GITHUB_OUTPUT
-
-
-  toggle-fsfo:
+  run-toggle-fsfo:
       needs: prepare-filtered-run-matrix
       strategy:
         fail-fast: false
@@ -293,15 +113,16 @@ jobs:
             ${{ 
               needs.prepare-filtered-run-matrix.result == 'success' &&
               needs.prepare-filtered-run-matrix.outputs.scheduled_matrix != '' &&
-              fromJson(needs.prepare-filtered-run-matrix.outputs.scheduled_matrix) ||
+              fromJson(needs.prepare-run-matrix.outputs.scheduled_matrix) ||
               '{"include":[]}'
              }}
       name: Toggle FSFO
       uses:
-        ./.github/workflows/oracle-db-toggle-fsfo.yml
+        ./.github/workflows/oracle-db-toggle-fsfo-excluding-non-working-day.yml
       with:
         TargetEnvironment: ${{ matrix.TargetEnvironment }}
         FSFOMode: ${{ matrix.Action }}
+        SkipNonWorkingDay: ${{ matrix.SkipNonWorkingDay }}
       secrets:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
