--- a/.github/workflows/oracle-db-toggle-fsfo-excluding-non-working-day.yml
+++ b/.github/workflows/oracle-db-toggle-fsfo-excluding-non-working-day.yml
@@ -24,10 +24,10 @@ on:
         options:
           - "disable"
           - "enable"
-      SkipNonWorkingDay:
+      SkipNonWorkingDays:
         description: "Skip non-working day?"
         type: choice
-        default: "yes"
+        default: "no"
         options:
           - "yes"
           - "no"
@@ -126,7 +126,7 @@ jobs:
 
   toggle-fsfo:
       needs: check-if-working-day
-      if: ${{ needs.check-if-working-day.outputs.working_day == 'YES' || github.event.inputs.SkipNonWorkingDay == 'no' }}
+      if: ${{ needs.check-if-working-day.outputs.working_day == 'YES' || github.event.inputs.SkipNonWorkingDays == 'no' }}
       name: Toggle FSFO
       uses:
         ministryofjustice/hmpps-delius-operational-automation/.github/workflows/oracle-db-toggle-fsfo.yml@main
@@ -136,7 +136,7 @@ jobs:
 
   skip-toggle-fsfo:
       needs: check-if-working-day
-      if: ${{ needs.check-if-working-day.outputs.working_day != 'YES' && github.event.inputs.SkipNonWorkingDay == 'yes' }}
+      if: ${{ needs.check-if-working-day.outputs.working_day != 'YES' && github.event.inputs.SkipNonWorkingDays == 'yes' }}
       runs-on: ubuntu-latest
       name: Do Not Toggle FSFO
       steps:
