Fix plurality of variable

--- a/.github/workflows/oracle-db-toggle-fsfo-schedule.yml
+++ b/.github/workflows/oracle-db-toggle-fsfo-schedule.yml
@@ -102,4 +102,4 @@ jobs:
     with:
       TargetEnvironment: ${{ matrix.TargetEnvironment }}
       FSFOMode: ${{ matrix.Action }}
-      SkipNonWorkingDay: ${{ matrix.SkipNonWorkingDay }}
+      SkipNonWorkingDays: ${{ matrix.SkipNonWorkingDays }}
