Change Skip Non Working Days default (#621)
* Fix jq pattern match to skip Non-Working Days

* Toggle FSFO only if a Working Day

* Run on development branch

* Remove push event

* Allow skipping of non-working days to be optional

* Additional condition

* Fix typo

* Change Default

* Pluralise the text

* Use boolean for skipping non-working days

* Use correct NOT syntax

* Filter matrix by schedule only

* Fix plurality of variable

* Use new intermediate workflow

* Fix typo

* Transfer workflow call to the Excluding Non Working Day version

* Skip Non Working Days is boolean

--- a/.github/workflows/oracle-db-toggle-fsfo-excluding-non-working-day.yml
+++ b/.github/workflows/oracle-db-toggle-fsfo-excluding-non-working-day.yml
@@ -24,13 +24,24 @@ on:
         options:
           - "disable"
           - "enable"
-      SkipNonWorkingDay:
-        description: "Skip non-working day?"
-        type: choice
-        default: "yes"
-        options:
-          - "yes"
-          - "no"
+      SkipNonWorkingDays:
+        description: "Skip non-working days?"
+        type: boolean
+        default: false
+
+  workflow_call:
+    inputs:
+      TargetEnvironment:
+        description: "Target environment"
+        required: true
+        type: string
+      FSFOMode:
+        description: "FSFO mode required."
+        required: true
+        type: string
+      SkipNonWorkingDays:
+        description: "Skip non-working days?"
+        type: boolean
 
 env:
   ansible_config: operations/playbooks/ansible.cfg
@@ -126,7 +137,7 @@ jobs:
 
   toggle-fsfo:
       needs: check-if-working-day
-      if: ${{ needs.check-if-working-day.outputs.working_day == 'YES' || github.event.inputs.SkipNonWorkingDay == 'no' }}
+      if: ${{ needs.check-if-working-day.outputs.working_day == 'YES' || ! github.event.inputs.SkipNonWorkingDays }}
       name: Toggle FSFO
       uses:
         ministryofjustice/hmpps-delius-operational-automation/.github/workflows/oracle-db-toggle-fsfo.yml@main
@@ -136,7 +147,7 @@ jobs:
 
   skip-toggle-fsfo:
       needs: check-if-working-day
-      if: ${{ needs.check-if-working-day.outputs.working_day != 'YES' && github.event.inputs.SkipNonWorkingDay == 'yes' }}
+      if: ${{ needs.check-if-working-day.outputs.working_day != 'YES' && github.event.inputs.SkipNonWorkingDays }}
       runs-on: ubuntu-latest
       name: Do Not Toggle FSFO
       steps:
