Added oracle-oem-blackout role to PDM Uplift

--- a/.github/workflows/delius-db-pdm-uplift.yml
+++ b/.github/workflows/delius-db-pdm-uplift.yml
@@ -104,6 +104,7 @@ jobs:
           sparse-checkout: |
             ansible/roles/secretsmanager-passwords
             ansible/roles/get-modernisation-platform-facts
+            ansible/roles/oracle-oem-blackout
           path: roles
           ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.SourceConfigVersion || 'main' }}
           fetch-depth: 0
