--- a/.github/workflows/oracle-db-duplicate.yml
+++ b/.github/workflows/oracle-db-duplicate.yml
@@ -668,6 +668,7 @@ jobs:
           sparse-checkout-cone-mode: false
           sparse-checkout: |
             playbooks/oracle_ha
+            playbooks/oracle_parameters
             playbooks/ansible.cfg
           path: operations
           ref: ${{ env.SourceCodeVersion }}
