--- a/playbooks/oracle_ha/build-ha/tasks/set-standby-config.yml
+++ b/playbooks/oracle_ha/build-ha/tasks/set-standby-config.yml
@@ -117,6 +117,22 @@
   delegate_to: localhost
   become: no
 
+- name: WHERE IS IT?????
+  shell: |
+         echo "HA"
+         ls -l /__w/hmpps-delius-operational-automation/hmpps-delius-operational-automation/operations/playbooks/oracle_ha
+         echo "HAUP"
+         ls -l /__w/hmpps-delius-operational-automation/hmpps-delius-operational-automation/operations/playbooks/oracle_ha/..
+         echo "PAR"
+         ls -l /__w/hmpps-delius-operational-automation/hmpps-delius-operational-automation/operations/playbooks/oracle_ha/../oracle_parameters
+         echo "SET"
+         ls -l /__w/hmpps-delius-operational-automation/hmpps-delius-operational-automation/operations/playbooks/oracle_ha/../oracle_parameters/set_oracle_parameters
+         echo "TARGET"
+         ls -l /github/home/.ansible
+        echo "ROLE"
+         ls -l /github/home/.ansible/roles
+  
+
 - name: (main/set-standby-config) Link to Oracle Parameters Role
   file:
     dest: ~/.ansible/roles/oracle_parameters
