--- a/playbooks/oracle_ha/build-ha/tasks/set-standby-config.yml
+++ b/playbooks/oracle_ha/build-ha/tasks/set-standby-config.yml
@@ -108,7 +108,7 @@
   delegate_to: localhost
   become: no
   
-# We use the oracle_paraeters playbook as a role to allow us to run
+# We use the oracle_parameters playbook as a role to allow us to run
 # the sqlnet.ora network configuration setup.  
 - name: (main/set-standby-config) Link to Oracle Parameters Role
   file:
